--- a/01-css-selectors-basics/main.css
+++ b/01-css-selectors-basics/main.css
@@ -55,5 +55,24 @@ a {
   font-weight: bold;
 }
 /* 4. Selector de classe */
-
+.important {
+  color: #c0392b;
+  font-weight: bold;
+  text-decoration: underline;
+}
+.destacada{
+  font-size: 1.5rem;
+  text-align: center;
+}
 /* 5. Selector ID */
+#principal{
+  color: #27ae60;
+  font-size: 1.3rem;
+  font-weight: bold;
+  text-transform: capitalize;
+}
+#contacte{
+  font-size: 0.9rem;
+  color: #7f8c8d;
+  font-style: italic;
+}
