--- a/02-model-caixa-css/main.css
+++ b/02-model-caixa-css/main.css
@@ -22,6 +22,7 @@ body {
 
 /* Contenidor de pàgina - controla l'amplada màxima i centra */
 #pagina {
+  padding: 1rem;
   max-width: 900px;
   margin: 1rem auto; /* Centra horitzontalment */
   box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.1);
@@ -29,33 +30,77 @@ body {
 
 /* Capçalera */
 header {
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+  text-align: center;
+  background-color: #2c3e50;
 }
 
 h1 {
+  color: white;
+  padding: 1rem;
+  font-weight: bold;
 }
 
 /* Contingut principal */
 main {
+  border: solid #e0e0e0 2px;
+  margin-top: 1rem;
 }
 
 /* Secció de projectes */
 h2 {
+  font-size: 2rem;
+  text-align: center;
+  color: #2c3e50;
+  border-bottom: solid #3498db 2px;
+  margin: 0 2rem;
 }
 
 /* Targeta de projecte */
 .projecte {
+  padding: 1rem;
+  border-radius: 12px;
+  margin: 2rem;
+  border: solid #e0e0e0 2px;
 }
 
 h3 {
+  font-size: 1.5rem;
+  color: #2c3e50;
 }
 
 /* Botó "Veure més" */
 .boto-veure {
+  background-color: #3498db;
+  padding: 0.5rem 1rem;
+  border-radius: 6px;
+  border-color: #2980b9;
+  color: white;
+  font-weight: bold;
 }
 
 /* Peu de pàgina */
 footer {
+  background-color: #2c3e50;
+  margin: 0.2rem;
+  padding-top: 0.5rem;
+  padding-bottom: 1rem;
+  text-align: center;
+  color: #ecf0f1;
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
 }
 
 #boto-unic {
+  text-align: center;
+  background-color: black;
+  color: #ecf0f1;
+  font-weight: bold;
+  padding: 1rem;
+}
+
+p {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
