--- a/02-model-caixa-css/main.css
+++ b/02-model-caixa-css/main.css
@@ -44,8 +44,9 @@ h1 {
 
 /* Contingut principal */
 main {
-  border: solid #e0e0e0 2px;
-  margin-top: 1rem;
+  box-shadow: 0 0 2px #e0e0e0;
+  margin-top: 0.5rem;
+  padding: 1rem;
 }
 
 /* Secció de projectes */
@@ -54,14 +55,13 @@ h2 {
   text-align: center;
   color: #2c3e50;
   border-bottom: solid #3498db 2px;
-  margin: 0 2rem;
 }
 
 /* Targeta de projecte */
 .projecte {
   padding: 1rem;
+  margin-top: 1rem;
   border-radius: 12px;
-  margin: 2rem;
   border: solid #e0e0e0 2px;
 }
 
@@ -83,7 +83,7 @@ h3 {
 /* Peu de pàgina */
 footer {
   background-color: #2c3e50;
-  margin: 0.2rem;
+  margin-top: 0.5rem;
   padding-top: 0.5rem;
   padding-bottom: 1rem;
   text-align: center;
